# malevich

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .ruff.toml  1.csv  2.csv  CNAME  MANIFEST.in  README.dev.md  README.md  VERSION  genindex.html  index.html  log.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.txt  sandbox.py  search.html  searchindex.js  setup.py  space_flow.json  test.py
.doctrees/: environment.pickle  index.doctree
.doctrees/API/: assistants.doctree  autoflow.doctree  index.doctree  models.doctree
.doctrees/Community/: Contributing.doctree  index.doctree
.doctrees/SDK/: index.doctree
.github/workflows/: clean.py  docs.yaml  pypi.yaml  pytest.yaml
API/: assistants.html  autoflow.html  index.html  models.html
API/interpreter/: core.html  index.html  space.html
API/meta/: index.html
API/square/: df.html  index.html  jls.html  utils.html
Community/: Contributing.html  index.html
SDK/: index.html
SDK/Apps/: Building.html  Introduction.html  Processors.html
SDK/Data/: index.html
SDK/Deployment/: Endpoints.html  WithCode.html
SDK/Flows/: Autoflow.html  Execution.html  Installation.html  Integration.html  Introduction.html  Lifecycle.html  Results.html
SDK/Project/: Dependencies.html  Structure.html
_sources/API/: autoflow.rst.txt  models.rst.txt
_sources/Community/: Contributing.rst.txt  index.rst.txt
build-docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  results.html  search.html  searchindex.js
build-docs/.doctrees/: environment.pickle  index.doctree  results.doctree
build-docs/API/: index.html  square.html
build-docs/Apps/: Building.html  What_is_App.html  What_is_Processor.html  index.html
docs/: conf.py  index.rst  uncollapse.js
examples/: Dockerfile  duolingo.py  examples.py  malevich.yaml  sandbox.py  subflows.py  taxonomy.py
malevich/: __init__.py  _ast.py  _deploy.py  annotations.py  cli.py  constants.py  core_api.py  help.py  manifest.py  my_flows.py  path.py  service.py  table.py  types.py
tests/: Dockerfile  __init__.py  utils.py
(+415 files in other folders)
