[tool.poetry]
name = "malevich"
version = "0.4.1"
description = ""
authors = ["Aleksandr Lobanov <aleksandr.lobanov.official@gmail.com>"]
readme = "README.md"
packages = [
    { include = "malevich" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typer = {version = ">=0.9.0", extras = ["all"]}
pydantic = ">=2.0.0"
malevich-coretools = ">=0.3.20"
malevich-space = ">=0.4.27"
pandas = "^2.2.3"
pydantic-yaml = "^1.3.0"
pygithub = "^2.4.0"
gitpython = "^3.1.43"
randomname = "^0.2.1"
botocore = "^1.35.49"
boto3 = "^1.35.49"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"
jsonpickle = "^3.3.0"
python-dotenv = "^1.0.1"
kafka-python = "^2.0.2"
deprecated = "^1.2.14"
datamodel-code-generator = "^0.26.2"
ruff = "^0.7.1"
duckdb = "^1.1.2"
duckdb-engine = "^0.13.4"
humanfriendly = "^10.0"
dill = "^0.3.9"
deepdiff = "^8.0.1"
astor = "^0.8.1"
malevich-app = "^0.2.12"


[tool.poetry.group.dev.dependencies]
typer = {version = ">=0.9.0", extras = ["all"]}
pydantic = ">=2.0.0"
malevich-coretools = ">=0.3.20"
malevich-space = ">=0.4.27"
pandas = "^2.2.3"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
ruff = "^0.7.1"
pydantic-yaml = "^1.3.0"
pygithub = "^2.4.0"
gitpython = "^3.1.43"
randomname = "^0.2.1"
botocore = "^1.35.49"
boto3 = "^1.35.49"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"
jsonpickle = "^3.3.0"
python-dotenv = "^1.0.1"
pydata-sphinx-theme = "^0.16.0"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jquery = "^4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
kafka-python = "^2.0.2"
deprecated = "^1.2.14"
datamodel-code-generator = "^0.26.2"
wget = "^3.2"
duckdb = "^1.1.2"
duckdb-engine = "^0.13.4"
humanfriendly = "^10.0"
dill = "^0.3.9"
deepdiff = "^8.0.1"
astor = "^0.8.1"
malevich-app = "^0.2.12"

[tool.poetry.scripts]
malevich = "malevich.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
